YUK-20509 - DR Setup Trigger popup spacing issues   - changed naming based on review

--- a/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
+++ b/yukon-client/yukon-web/src/com/cannontech/web/common/resources/yukon.less
@@ -2006,8 +2006,11 @@ table th, .title-header, .column-header {
     padding-right:10px;
 }
 
-.js-edit-trigger .name {
+.spaced-form-controls .name {
     line-height: 25px;
+    vertical-align: middle;
+}
+.spaced-form-controls .value {
     vertical-align: middle;
 }
 
